--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,400"
       rel="stylesheet"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- https://fonts.google.com/ -->
     <link rel="stylesheet" href="css/tooplate-wave-cafe.css" />
     <!--
@@ -30,7 +35,7 @@ https://www.tooplate.com/view/2121-wave-cafe
               <ul class="tm-site-nav-ul">
                 <li class="tm-page-nav-item">
                   <a href="#drink" class="tm-page-link active">
-                    <i class="fas fa-mug-hot tm-page-link-icon"></i>
+                    <i class="fas fa-running tm-page-link-icon"></i>
                     <span>Sports Equipment</span>
                   </a>
                 </li>
@@ -42,8 +47,8 @@ https://www.tooplate.com/view/2121-wave-cafe
                 </li>
                 <li class="tm-page-nav-item">
                   <a href="#special" class="tm-page-link">
-                    <i class="fas fa-glass-martini tm-page-link-icon"></i>
-                    <span>Special Items</span>
+                    <i class="fas fa-shipping-fast tm-page-link-icon"></i>
+                    <span>Delivery</span>
                   </a>
                 </li>
                 <li class="tm-page-nav-item">
@@ -62,15 +67,18 @@ https://www.tooplate.com/view/2121-wave-cafe
               <!-- Drink Menu Page -->
               <nav class="tm-black-bg tm-drinks-nav">
                 <ul>
-                  <li>
+                  <li data-bs-toggle="tooltip" title="Football Gear">
+                    <i class="fas fa-football-ball"></i>
                     <a href="#" class="tm-tab-link active" data-id="cold"
                       >Football</a
                     >
                   </li>
-                  <li>
+                  <li data-bs-toggle="tooltip" title="Baseball Gear">
+                    <i class="fas fa-baseball-ball"></i>
                     <a href="#" class="tm-tab-link" data-id="hot">Baseball</a>
                   </li>
-                  <li>
+                  <li data-bs-toggle="tooltip" title="Basketball Gear">
+                    <i class="fas fa-basketball-ball"></i>
                     <a href="#" class="tm-tab-link" data-id="juice"
                       >Basketball</a
                     >
@@ -344,75 +352,18 @@ https://www.tooplate.com/view/2121-wave-cafe
             <div id="special" class="tm-page-content">
               <div class="tm-special-items">
                 <div class="tm-black-bg tm-special-item">
-                  <img src="img/special-01.jpg" alt="Image" />
                   <div class="tm-special-item-description">
                     <h2 class="tm-text-primary tm-special-item-title">
-                      Special One
+                      Shipping Information
                     </h2>
                     <p class="tm-special-item-text">
-                      Here is a short text description for the first special
-                      item. You are not allowed to redistribute this template
-                      ZIP file.
-                    </p>
-                  </div>
-                </div>
-                <div class="tm-black-bg tm-special-item">
-                  <img src="img/special-02.jpg" alt="Image" />
-                  <div class="tm-special-item-description">
-                    <h2 class="tm-text-primary tm-special-item-title">
-                      Second Item
-                    </h2>
-                    <p class="tm-special-item-text">
-                      You are allowed to download, modify and use this template
-                      for your commercial or non-commercial websites.
-                    </p>
-                  </div>
-                </div>
-                <div class="tm-black-bg tm-special-item">
-                  <img src="img/special-03.jpg" alt="Image" />
-                  <div class="tm-special-item-description">
-                    <h2 class="tm-text-primary tm-special-item-title">
-                      Third Special Item
-                    </h2>
-                    <p class="tm-special-item-text">
-                      Pellentesque in ultrices mi, quis mollis nulla. Quisque
-                      sed commodo est, quis tincidunt nunc.
-                    </p>
-                  </div>
-                </div>
-                <div class="tm-black-bg tm-special-item">
-                  <img src="img/special-04.jpg" alt="Image" />
-                  <div class="tm-special-item-description">
-                    <h2 class="tm-text-primary tm-special-item-title">
-                      Special Item Fourth
-                    </h2>
-                    <p class="tm-special-item-text">
-                      Vivamus finibus nulla sed metus sagittis, sed ultrices
-                      magna aliquam. Mauris fermentum.
-                    </p>
-                  </div>
-                </div>
-                <div class="tm-black-bg tm-special-item">
-                  <img src="img/special-05.jpg" alt="Image" />
-                  <div class="tm-special-item-description">
-                    <h2 class="tm-text-primary tm-special-item-title">
-                      Sixth Sense
-                    </h2>
-                    <p class="tm-special-item-text">
-                      Here is a short text description for sixth item. This text
-                      is four lines.
-                    </p>
-                  </div>
-                </div>
-                <div class="tm-black-bg tm-special-item">
-                  <img src="img/special-06.jpg" alt="Image" />
-                  <div class="tm-special-item-description">
-                    <h2 class="tm-text-primary tm-special-item-title">
-                      Seventh Item
-                    </h2>
-                    <p class="tm-special-item-text">
-                      Curabitur eget erat sit amet sapien aliquet vulputate quis
-                      sed arcu.
+                      All orders over $50 qualify for free shipping.
+                      <br />
+                      <br />
+                      Standard shipping cost within the United States is $8.
+                      <br />
+                      <br />
+                      International shipping cost depends on location.
                     </p>
                   </div>
                 </div>
@@ -423,20 +374,30 @@ https://www.tooplate.com/view/2121-wave-cafe
             <!-- Contact Page -->
             <div id="contact" class="tm-page-content">
               <div class="tm-black-bg tm-contact-text-container">
-                <h2 class="tm-text-primary">Contact Wave</h2>
+                <h2 class="tm-text-primary">Contact Form</h2>
                 <p>
-                  Wave Cafe Template has a video background. You can use this
-                  layout for your websites. Please contact Tooplate's Facebook
-                  page. Tell your friends about our website.
+                  Please fill out the form to contact us regarding any questions
+                  or inquires. We will reach out to you within 3 business days.
                 </p>
               </div>
               <div class="tm-black-bg tm-contact-form-container tm-align-right">
-                <form action="" method="POST" id="contact-form">
+                <iframe
+                  name="dummyframe"
+                  id="dummyframe"
+                  style="display: none;"
+                ></iframe>
+
+                <form
+                  action=""
+                  method="POST"
+                  id="contact-form"
+                  target="dummyframe"
+                >
                   <div class="tm-form-group">
                     <input
                       type="text"
                       name="name"
-                      class="tm-form-control"
+                      class="form-name tm-form-control"
                       placeholder="Name"
                       required=""
                     />
@@ -445,7 +406,7 @@ https://www.tooplate.com/view/2121-wave-cafe
                     <input
                       type="email"
                       name="email"
-                      class="tm-form-control"
+                      class="form-email tm-form-control"
                       placeholder="Email"
                       required=""
                     />
@@ -454,13 +415,18 @@ https://www.tooplate.com/view/2121-wave-cafe
                     <textarea
                       rows="6"
                       name="message"
-                      class="tm-form-control"
+                      class=" form-message tm-form-control"
+                      id="form-message"
                       placeholder="Message"
                       required=""
                     ></textarea>
                   </div>
                   <div>
-                    <button type="submit" class="tm-btn-primary tm-align-right">
+                    <button
+                      type="submit"
+                      onclick="resetForm()"
+                      class="tm-btn-primary tm-align-right"
+                    >
                       Submit
                     </button>
                   </div>
@@ -473,14 +439,7 @@ https://www.tooplate.com/view/2121-wave-cafe
       </div>
       <footer class="tm-site-footer">
         <p class="tm-black-bg tm-footer-text">
-          Copyright 2020 Wave Cafe | Design:
-          <a
-            href="https://www.tooplate.com"
-            class="tm-footer-link"
-            rel="sponsored"
-            target="_parent"
-            >Tooplate</a
-          >
+          Copyright 2020 Larana Inc
         </p>
       </footer>
     </div>
@@ -495,6 +454,17 @@ https://www.tooplate.com/view/2121-wave-cafe
 
     <script src="js/jquery-3.4.1.min.js"></script>
     <script>
+      function resetForm() {
+        document.getElementById("contact-form").reset();
+      }
+
+      var tooltipTriggerList = [].slice.call(
+        document.querySelectorAll('[data-bs-toggle="tooltip"]')
+      );
+      var tooltipList = tooltipTriggerList.map(function(tooltipTriggerEl) {
+        return new bootstrap.Tooltip(tooltipTriggerEl);
+      });
+
       function setVideoSize() {
         const vidWidth = 1920;
         const vidHeight = 1080;
